Fixed white space

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,32 +1,31 @@
-body{
-  background-color:whitesmoke;
-}
-div.center
-{
-  margin:auto;
-  width:70%;
+body {
+  background-color: whitesmoke;
 }
 
-div.textcenter
-{
+div.center {
+  margin: auto;
+  width: 70%;
+}
+
+div.textcenter {
   /*position:absolute;*/
   /*top:50%;*/
   /*left:50%;*/
   margin-top: 50px;
-  margin-left:auto;
-  margin-right:auto;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
 }
 
-input.input{
+input.input {
   width: 250px;
 }
 
-input.button{
+input.button {
   background-color: dodgerblue;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
-  border-radius:5px;
+  border-radius: 5px;
   color: ghostwhite;
   font-family: 'Impact';
   font-size: 30px;
@@ -39,28 +38,27 @@ input.button{
 
 input.button:hover {
   border: none;
-  background:green;
+  background: green;
   box-shadow: 5px 5px 5px #888888;
 }
 
 input.button:active {
   border: none;
-  background:green;
+  background: green;
   box-shadow: 2px 2px 2px #888888;
 }
 
-
-p.large_text{
+p.large_text {
   color: dodgerblue;
   font-size: 20px;
 }
 
-p.wrong_url{
+p.wrong_url {
   color: darkred;
   font-style: bold;
   font-size: 18px;
 }
 
-div.link{
+div.link {
 
 }
